@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -Xmx1024m -XX:MaxPermSize=384m -jar ./lib/mage-server-${project.version}.jar
+java -Xmx1024m -jar ./lib/mage-server-${project.version}.jar
